Fix the grid spacing etc.
fr, not %. Lesson learned.

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -71,36 +71,37 @@ p img {
   margin: 0 auto;
 }
 
-/* .full-width{
-  grid-column: 1 / span 2;
-} */
-
-
-
 .grid-container {
   display: block;
 }
 
-.grid-container img {
-  max-width: 100%;
+.grid-container div {
+  padding-bottom: 4em;
+  border-bottom: 1px solid #ddd;
+}
+
+.grid-container div:last-child {
+  border-bottom: none;
 }
 
 @media only screen and (min-width: 900px) {
   .grid-container {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 1fr 1fr;
     grid-column-gap: 1em;
     grid-row-gap: 1em;
+  }
+  .grid-container div {
+    border-bottom: none;
+    padding-bottom: 0;
   }
 }
 
 @media only screen and (min-width: 1400px) {
   .grid-container {
-    grid-template-columns: 33.33% 33.33% 33.33%;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
-
-
 
 footer {
   padding: 12px 20px 120px 20px;
